# openai-progenitor

./: .gitignore  .gitmodules  Cargo.toml  README.md  progenitor
.github/workflows/: test.yaml
cli/: Cargo.toml
cli/src/: generated_cli.rs  main.rs
sdk/: Cargo.toml  build.rs
sdk-httpmock/: Cargo.toml  build.rs
sdk-httpmock/src/: generated_httpmock.rs  lib.rs
sdk/src/: lib.rs
