[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
convert_case = { workspace = true }
reqwest = { workspace = true }
sdk = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
