[package]
name = "sdk"
version.workspace = true
edition.workspace = true

[dependencies]
httpmock = { workspace = true }
progenitor-client = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
progenitor = { workspace = true }
serde_yaml = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
